<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Coming Home</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="google_maps_key">AIzaSyANRXttThFYwNxM1wDkHKNE3tbVQExiBF0</string>

    <string-array name="groups_array">
        <item>Карта</item>
        <item>Вид карты</item>
        <item>Reset</item>
        <item>Options</item>
        <item>About</item>
    </string-array>

    <string-array name="map_type_children_array">
        <item>Normal</item>
        <item>Satellite</item>
        <item>Relief</item>
        <item>Hybrid</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>


    <string name="area_point_a">Point A</string>
    <string name="area_point_a_value">Point A value</string>

    <string name="area_point_b">Point B</string>
    <string name="area_point_b_value">Point B value</string>

    <string name="area_point_me">I am here</string>
    <string name="area_point_me_value">I am here</string>
</resources>
