<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:tag="map_tag" />

    <Button
        android:id="@+id/btn_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|top"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:clickable="false"
        android:enabled="true"
        android:text="go" />

    <Button
        android:id="@+id/btn_go_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="10dp"
        android:text="go home" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|top"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="reset"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/area_additional_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_area_item_name_1"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:text="@string/area_point_a"
                android:textColor="@color/bright_foreground_disabled_material_dark" />

            <TextView
                android:id="@+id/tv_area_point_a_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/area_point_a_value"
                android:textColor="@color/bright_foreground_disabled_material_dark"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_area_item_name_2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:text="@string/area_point_b"
                android:textColor="@color/bright_foreground_disabled_material_dark" />

            <TextView
                android:id="@+id/tv_area_point_b_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/area_point_b_value"
                android:textColor="@color/bright_foreground_disabled_material_dark"
                android:layout_weight="1" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_area_point_me"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:text="@string/area_point_me"
                android:textColor="@color/bright_foreground_disabled_material_dark" />

            <TextView
                android:id="@+id/tv_area_point_me_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/area_point_me_value"
                android:textColor="@color/bright_foreground_disabled_material_dark" />


        </LinearLayout>
    </LinearLayout>


</FrameLayout>